--- a/embeds/ES/settings.json
+++ b/embeds/ES/settings.json
@@ -1,14 +1,14 @@
 {
    "Title": "Configuraciones de servidor de %VAR",
    "Moderation": {
-      "name": "Moderation",
+      "name": "Moderaci\u00F3n",
       "value": "Anti-scam : %VAR1\nAnti Ping Fantasma : %VAR2\nMejor Links de Mensaje : %VAR3"
    },
    "Channels": {
       "name": "Canales",
       "value": "Improved Pins : %VAR1\nSugerencias : %VAR2\nReportes : %VAR3"
    },
-   "Footer": "Para cambiar o adicionar los canales, usa `set <categoria> <canal>`, y `remove <categoria>` para remover.",
+   "Footer": "Para cambiar o adicionar los canales, usa `set <categor\u00EDa> <canal>`, y `remove <categor\u00EDa>` para remover.",
    "Button": {
       "Scam": "Anti-scam",
       "Ping": "Ping fantasma",
